# jacobinet

./: README.md  pyproject.toml  tox.ini
.github/workflows/: python-tests.yml
jacobinet/: __init__.py  utils.py
jacobinet/attacks/: __init__.py  attacks.py  base_attacks.py  fgsm.py  pgd.py  utils.py
jacobinet/layers/: __init__.py  convert.py  layer.py  utils.py
jacobinet/layers/activations/: __init__.py  elu.py  leaky_relu.py  prelu.py  prime.py  relu.py
jacobinet/layers/convolutional/: __init__.py  conv1d.py  conv2d.py  conv3d.py  depthwise_conv1d.py  depthwise_conv2d.py  depthwise_conv3d.py  separable_conv1d.py  separable_conv2d.py
jacobinet/layers/core/: __init__.py  activations.py  dense.py  einsum_dense.py
jacobinet/layers/custom/: prime.py
jacobinet/layers/merging/: __init__.py  add.py  average.py  base_merge.py  concatenate.py  dot.py  maximum.py  minimum.py  multiply.py  subtract.py
jacobinet/layers/normalization/: __init__.py  batch_normalization.py
jacobinet/layers/pooling/: __init__.py  average_pooling1d.py  average_pooling2d.py  average_pooling3d.py  global_average_pooling1d.py  global_average_pooling2d.py  global_average_pooling3d.py  global_max_pooling2D.py  max_pooling2d.py  utils_conv.py  utils_max.py
jacobinet/layers/reshaping/: __init__.py  cropping1d.py  cropping2d.py  cropping3d.py  flatten.py  permute.py  repeat_vector.py  reshape.py  upsampling1d.py  upsampling2D.py  upsampling3d.py  zero_padding1d.py  zero_padding2d.py  zero_padding3d.py
jacobinet/lipschitz/: __init__.py  base_model.py  compute_lipschitz_models.py
jacobinet/losses/: __init__.py  base_loss.py  categorical_crossentropy.py  convert.py  loss.py
jacobinet/models/: __init__.py  base_model.py  clone.py  model.py  node.py  sequential.py  utils.py
tests/: conftest.py  test_attack.py  test_average_pooling.py  test_backward_activations.py  test_backward_convolution_with_activation.py  test_backward_convolutional.py  test_backward_core.py  test_backward_custom.py  test_backward_linear.py  test_backward_merging.py  test_backward_models.py  test_backward_normalization.py  test_backward_pooling.py  test_backward_reshaping.py  test_lipschitz.py
tutorials/: AdversarialTraining.ipynb  CustomOp.ipynb  GradientOverWeights.ipynb  LipschitzConstant.ipynb  PlottingBackward.ipynb  Serialization_Export.ipynb  TrainWithSparsity.ipynb
